--- a/9-pandas/tasks/Pandas_project.ipynb
+++ b/9-pandas/tasks/Pandas_project.ipynb
@@ -6,7 +6,7 @@
         "id": "F9H_HrfbBVoM"
       },
       "source": [
-        "Analyzing Student Enrollment Trends**\n",
+        "**Analyzing Student Enrollment Trends**\n",
         "\n",
         "**Dataset Generation**"
       ]
